# Azyroth-Framework

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
azyroth/: AdminController.py  cli.py
azyroth/project_template/: .env.example  alembic.ini  requirements.txt
azyroth/project_template/app/: config.py
azyroth/project_template/app/Admin/Resources/: PostResouce.py
azyroth/project_template/app/Console/: Kernel.py
azyroth/project_template/app/Http/: Kernel.py
azyroth/project_template/app/Http/Controllers/: WebController.py
azyroth/project_template/app/Http/Middleware/: AdminAuthMiddleware.py  VerifyCsrfToken.py
azyroth/project_template/app/Models/: Post.py  Project.py  User.py
azyroth/project_template/app/Providers/: AppServiceProvider.py  DatabaseServiceProvider.py
azyroth/project_template/bootstrap/: app.py
azyroth/project_template/config/: app.py  database.py  logging.py  services.py
azyroth/project_template/database/migrations/: env.py  script.py.mako
azyroth/project_template/database/migrations/versions/: 2024_01_01_create_users_table.py  2024_01_02_create_projects_table.py
azyroth/project_template/database/seeders/: ProjectSeeder.py  UserSeeder.py
azyroth/project_template/public/: index.py
azyroth/project_template/resources/views/: home.html
azyroth/project_template/resources/views/admin/: dashboard.html  form.html  layout.html  list.html  login.html
azyroth/project_template/resources/views/layouts/: app.html
azyroth/project_template/routes/: api.py  web.py
azyroth/project_template/tests/Feature/: HttpTest.py
azyroth/project_template/tests/Unit/: ExampleTest.py
