[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azyroth-framework"
version = "0.1.0"
# ... (bagian project tetap sama) ...
dependencies = [
    "Flask",
    "SQLAlchemy",
    "python-dotenv",
    "Click",
    "alembic",
    "pymysql",
    "pyngrok",
]

[project.scripts]
azyroth = "azyroth.cli:main_cli"

# Perhatikan ada [tool.setuptools] sekarang
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
azyroth = ["project_template/**"]
