[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azyroth-framework"
version = "0.1.0"
authors = [
  { name="Fikkanel", email="mfikkanel@gmail.com" },
]
description = "A Python web framework inspired by Laravel."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask",
    "SQLAlchemy",
    "python-dotenv",
    "Click",
    "alembic",
    "pymysql",
    "pyngrok",
]

# Membuat perintah `azyroth` di terminal
[project.scripts]
azyroth = "azyroth.cli:main_cli"

# Memberitahu setuptools untuk mematuhi MANIFEST.in
# dan menyertakan file non-kode
[tool.setuptools]
include-package-data = true

# Secara eksplisit menyertakan semua file di dalam project_template
# Ini adalah perbaikan penting untuk masalah file yang tidak tercopy
[tool.setuptools.package-data]
azyroth = ["project_template/**"]
